Fixed bug with hero image (that was provoking a horizontal scrolling)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -263,6 +263,14 @@ body{
     }
 }
 
+.hero-image-margin-right{
+    margin-right: 0;
+}
+
+.hero-image-padding-right {
+    padding-right: 0;
+}
+
 /* ---------------------------------------------Home page */
 
 .main-text{
